--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,10 +2,7 @@ version: '3.9'
 
 services:
   springboot-app:
-    image: wiremock-demo-app:latest
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     container_name: springboot-app
     ports:
       - "8080:8080"   # Spring Boot API
